# stm32-mitutoyo-modbus

./: Cargo.toml  Embed.toml  memory.x
.cargo/: config.toml
src/: main.rs  mitutoyo.rs  setup.rs
