[package]
name = "stm32-mitutoyo-modbus"
version = "0.1.0"
authors = ["pintariching <tilen.pintaric99@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = { version = "0.3.1", features = ["defmt"] }


[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f439", "defmt", ]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
