[package]
name = "stm32-mitutoyo-modbus"
version = "0.1.0"
authors = ["pintariching <tilen.pintaric99@gmail.com>"]
edition = "2021"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = "0.7"
cortex-m-rt = "0.7"
stm32f4xx-hal = { version = "0.20", features = ["stm32f439", "defmt"] }
stm32-eth = { version = "0.6", features = ["stm32f439", "smoltcp-phy"] }
panic-probe = { version = "0.3", features = ["defmt"] }
smoltcp = { version = "0.11.0", default-features = false, features = [
	"medium-ethernet",
	"proto-ipv4",
	"socket-tcp",
	"defmt",
] }
rmodbus = { version = "0.9", default-features = false, features = ["heapless"] }
heapless = "0.8"
byteorder = { version = "1.5", default-features = false }
micromath = "2.1"

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
